--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "angular-ui-utils": "bower",
     "angular-ui-router": "~0.2",
     "angular-file-upload": "1.1.5",
-    "ng-file-upload": "^12.2.13"
+    "ng-file-upload": "^12.2.13",
+    "ng-file-upload-shim": "^12.2.13"
   },
   "resolutions": {
     "angular": "~1.3"
